Sat Jan 22 16:00:52 CET 2000  Sven Neumann <sven@gimp.org>

	* app/commands.c
	* app/gdisplay.c
	* app/gdisplay.h
	* app/scale.c: call setup_scale when changing the resolution or unit,
	so the rulers get updated correctly

Sat Jan 21 21:00:00 CST 2000 Seth Burgess <sjburges@gimp.org>

	* app/transform_core.c: applied Steinar's 
        <sgunderson@bigfoot.com> fix for a NULL pointer 
        dereference in the transform core.
        
Sat Jan 22 01:47:30 GMT 2000 Nick Lamb <njl195@zepler.org.uk>

	* plug-ins/common/tiff.c: Fix bug reported by Marc Lehmann

Sat Jan 22 01:02:25 CET 2000  Stanislav Brabec  <utx@penguin.cz>

	* plug-ins/gfig/gfig.c: Menu i18n fix.

Sat Jan 22 00:36:54 CET 2000  Stanislav Brabec  <utx@penguin.cz>

	* plug-ins/gflare/gflare.c: Applied patch on request of
	Martin Weber <martweb@gmx.net>.

Fri Jan 21 16:35:26 EST 2000 Gregory McLean <gregm@comstar.net>

	* gimp.spec: Updated a bit more, split the perl stuff off into
	a seperate package as it needs other bits that aren't in a dist
	by default. Also work on auto-generating the %files part.

Fri Jan 21 18:11:05 CET 2000  Sven Neumann <sven@gimp.org>

	* plug-ins/script-fu/script-fu-scripts.c: Provide a copy 
	of the improved g_strescape function from glib-1.3 if 
	compiled with older versions of glib. This allows to use 
	quotes and other special characters in Script-Fu strings.

Thu Jan 20 17:37:38 PST 2000 Manish Singh <yosh@gimp.org>

	* configure.in
	* plug-ins/gimp_ace
	* plug-ins/common/Makefile.am
	* plug-ins/common/kaleidoscope.c: reverted previous plugin addition

Fri Jan 21 00:24:19 CET 2000  Stanislav Brabec  <utx@penguin.cz>

	* plug-ins/rcm/rcm.c: Typo fix.

Thu Jan 20 23:28:35 CET 2000  Stanislav Brabec  <utx@penguin.cz>

	Added new plug-ins from Martin Weber <martweb@gmx.net>:
	* plug-ins/common/kaleidoscope.c: New file.
	* plug-ins/gimp_ace: New directory.
	* plug-ins/common/Makefile.am:  Updated.
	* configure.in: Updated.
